OS11SPRYKE-1742- z-index fix (#2245)
* Adding css for counter

* Added css for quantity-counter

* Fixed issue with z-index

--- a/src/Pyz/Yves/ShopUi/Theme/default/components/molecules/quantity-counter/quantity-counter.scss
+++ b/src/Pyz/Yves/ShopUi/Theme/default/components/molecules/quantity-counter/quantity-counter.scss
@@ -51,7 +51,8 @@
 
         &__col {
             padding: 0;
-            &:first-child{
+            &:nth-child(odd)
+            {
                 z-index: 1;
             }
         }
